Issue #11 - Add header comment at EventCOnsultation class - and removing blank spaces